* Support dispute

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Add webhook for charge and source
* Allow to select customer source on payment
* Allow to create customer with ID
* Allow to create manual payment
* Add capture

Version 4.4.0 - 2017-05-01
* Initial release