@@ -1,3 +1,4 @@
+* Support all charge events
 * Support dispute
 
 Version 4.6.0 - 2017-10-30
